--- a/AgentPrototype/AgentPrototype.csproj
+++ b/AgentPrototype/AgentPrototype.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RamInfo.cs" />
+    <Compile Include="Serializator.cs" />
     <Compile Include="StorageInfo.cs" />
     <Compile Include="SysInfo.cs" />
     <Compile Include="SystemInfo.cs" />
