--- a/AgentPrototype/AgentPrototype.csproj
+++ b/AgentPrototype/AgentPrototype.csproj
@@ -47,11 +47,13 @@
     <Compile Include="HddInfo.cs" />
     <Compile Include="ISysInfo.cs" />
     <Compile Include="NetworkInfo.cs" />
+    <Compile Include="OsInfo.cs" />
     <Compile Include="OSVersionInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RamInfo.cs" />
     <Compile Include="Serializator.cs" />
+    <Compile Include="ServicesStatus.cs" />
     <Compile Include="StorageInfo.cs" />
     <Compile Include="SysInfo.cs" />
     <Compile Include="SystemInfo.cs" />
